examples/test/testpolicy14926.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14926
  namespace: namespace471
spec:
  podSelector:
    matchLabels:
      key30: value43
      key44: value36
      key7: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value21
          key8: value16
          key42: value14
      podSelector:
        matchLabels:
          key29: value26
